api product for category page